# mGBA-Android-Port2

./: .gitattributes  .replit  BUILD_GUIDE.md  README.md  build.gradle.kts  build.sh  gradlew  gradlew.bat  replit.md  replit.nix  settings.gradle.kts
.github/workflows/: build-apk.yml
.gradle-home/.tmp/: gradle-api-8.9.jar9375006129324244532.tmp
.gradle-home/caches/journal-1/: file-access.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mgba_jni.c
app/src/main/java/com/example/mgbalink/: AppPrefs.kt  AudioPlayer.kt  DolphinLinkDialog.kt  EmulatorCore.kt  EmulatorView.kt  FolderSetupActivity.kt  LayoutEditorActivity.kt  LayoutEditorView.kt  LibraryActivity.kt  MainActivity.kt  NativeBridge.kt  SettingsActivity.kt  TouchControlsView.kt
app/src/main/res/drawable/: dot_game.xml
app/src/main/res/layout/: activity_folder_setup.xml  activity_layout_editor.xml  activity_library.xml  activity_main.xml  activity_settings.xml  item_game.xml
app/src/main/res/values/: strings.xml
mgba-core/: README.md
